@@ -1,0 +1,4 @@
+__all__ = [ 'decode_line']
+#from PrawNewsBot.MailParser.pop3MailReader import pop3MailReader
+from PrawNewsBot.MailParser.MailParser import decode_line
+
