@@ -1,2 +1,2 @@
-mypybots@gmail.com
 stevendias11@gmail.com
+ssd42@njit.edu
