@@ -41,7 +41,7 @@ def sendMail(email):
     # Converts from possible Unicode to avoid an encoding error
 
     text['From'] = sender
-    text['To'] = email # ','.join(receivers)
+    text['To'] = email  # ','.join(receivers)
     text['Subject'] = subject
 
     try:
@@ -53,11 +53,23 @@ def sendMail(email):
         smtpObj.sendmail(sender, email, text.as_string())
         smtpObj.quit()
         print("Successfully sent email")
-    except Exception as e:
+    except Exception as e:                           # Something can go wrong from google's side or an update
         print("Error: unable to send email: {}".format(e))
         logging.debug(e)
 
+'''
+This entire method could be avoided by using bcc. I'm dumb. Fix this before putting it live, since it takes
+about a second between each email so in a db of 500+ it can take up to a few minutes ruining the point of
+getting it everyday by 9 o'clock sharp
+having it take about 12-22 seconds (pycron runs every 10 seconds and haven't tested it enough yet) to start
+and one consquent second to send every email this could be avoided
+'''
+
+
 for address in receivers:
+
+    # This has to be set up for an try/except error, although most of the addresses will be correct
+    # On the off chance it's not, I want to make sure everyone else gets it
     sendMail(address)
     ''' This code is mainly on the pi and is to be erased later on'''
     with open('logger.txt', 'a') as logger:
